--- a/materials/java/6_5_2024.md
+++ b/materials/java/6_5_2024.md
@@ -12,5 +12,23 @@ https://www.geeksforgeeks.org/introduction-to-java/?ref=lbp
 Read the following blog
 https://www.w3schools.com/java/java_comments.asp
 
+programming? https://github.com/ragaPriya224/Dru24Batch1/blob/master/materials/java/1.Programming_6YearOld_.pdf
+
+java features: https://www.youtube.com/watch?v=ZuDmSzORI0Y
+
+history: https://www.youtube.com/watch?v=Y-ubmaLsd5E&t=10s
+
+compiler vs interpreter: https://www.youtube.com/watch?v=G81hoJTvQVg&t=12s
+
+https://github.com/ragaPriya224/Dru24Batch1/blob/master/materials/java/2.0compiler.pdf
+
+https://github.com/ragaPriya224/Dru24Batch1/blob/master/materials/java/2.1compiler_codechip.mp4
+
+https://github.com/ragaPriya224/Dru24Batch1/blob/master/materials/java/3.syntax_codechip.mp4
+
+https://github.com/ragaPriya224/Dru24Batch1/blob/master/materials/java/4.1variable_java_intro_mp4.mp4
+
+https://github.com/ragaPriya224/Dru24Batch1/blob/master/materials/java/4.variable_java_intro.pdf
+
 
 
