--- a/exercise/7_5_24.md
+++ b/exercise/7_5_24.md
@@ -1,6 +1,6 @@
 do the following tasks:
 ------------------------------------
-go through array topic, string topic in w3schools from above links, and solve the w3exercises, related to that. 
+go through array topic, string topic in w3schools, and solve the w3exercises, related to that. 
 -------------------------------
 The following code should replace lol in the message with laugh out loud and print the new message.
 
