--- a/exercise/7_5_24.md
+++ b/exercise/7_5_24.md
@@ -180,3 +180,42 @@ Switch problems:
 try switch case for printing the values for grade.. suppose if grade is A, print someting like, good or above 90%, something like that.. try to have 4-5 cases and default block as well 
 
 -----------------------------------
+-----------------------------------
+
+**WHILE LOOP SYNTAX:**
+
+      while (condition) {
+        // code block to be executed
+      }
+
+--------------------------------------
+**FOR LOOP SYNTAX:**
+
+    for(initialization; condition; increment/decrement){    
+    //statement or code to be executed    
+    } 
+  
+ **DO WHILE LOOP SYNTAX:**
+    
+      do {
+      // code block to be executed
+      }
+      while (condition);
+    
+**PATTERN PROGRAM:**
+    
+https://www.edureka.co/blog/30-pattern-programs-in-java/
+      
+see the pattern and try to do it by yourself, after that check the coding in the website. 
+
+1. Pyramid Program
+
+2. Right Triangle Star Pattern
+
+3.Left Triangle Star Pattern
+
+4.Downward Triangle Star Pattern
+
+5.Right Alphabetic triangle 
+
+-------------------------------
