--- a/exercise/7_5_24.md
+++ b/exercise/7_5_24.md
@@ -219,3 +219,61 @@ see the pattern and try to do it by yourself, after that check the coding in the
 5.Right Alphabetic triangle 
 
 -------------------------------
+
+TASK
+
+![image](https://user-images.githubusercontent.com/90038032/235847667-162c70de-0aa6-42bd-ac14-387696583e94.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235867042-ad9d76f7-6b1d-4dbe-80ef-386ea63698a6.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235867105-23f1c1f3-edc8-411d-bb06-26fed2ee319b.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235867173-d893106a-00f3-4899-9e20-6e777b133545.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235867245-c195b3ea-8bc8-4907-86d7-a31d712de122.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235867291-b6edfcec-7dbb-4336-a590-2c2e8cfb1b36.png)
+
+---------------------------------------------------
+
+![image](https://user-images.githubusercontent.com/90038032/235867405-fba4e870-c592-4ba5-83c6-a7d330bb184d.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235867470-448368f1-5939-48d8-9035-338756c04265.png)
+
+-------------------OPTIMISE THIS CODE ------------
+![image](https://user-images.githubusercontent.com/90038032/235867574-c1b42eaa-d672-4953-992a-91f83d06fc6b.png)
+
+--------------------------
+
+SWITCH PROBLEM:
+
+try switch case for printing the values for grade.. suppose if grade is A, print someting like, good or above 90%, something like that.. try to have 4-5 cases and default block as well 
+
+----------------------------------------------------------------------------
+
+![image](https://user-images.githubusercontent.com/90038032/235867907-beb94445-b4e6-4780-8e2b-b904bea4eec0.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235867970-99a2adef-291a-4fdb-a76c-5337c49aac29.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235868043-fc234742-3562-4c55-8d20-290d596454d0.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235868155-c0da9f1b-545b-4bd3-9129-319861153091.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235868228-e16fe52b-e059-483f-8850-f81965172855.png)
+
+--------------ANSWERS
+
+![image](https://user-images.githubusercontent.com/90038032/235868274-144c9747-ed36-4454-b0f1-64b61aa99104.png)
+
+------------------------------------
+
+![image](https://user-images.githubusercontent.com/90038032/235868494-4108b660-834a-42f0-853d-a591dc52091d.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235868589-89d20a5b-097d-42c2-b973-7b90975b08f8.png)
+
+![image](https://user-images.githubusercontent.com/90038032/235868650-8c806f14-f34b-46a6-81bb-af4ad1c74ab6.png)
+
+------------ANSWERS--------------
+![image](https://user-images.githubusercontent.com/90038032/235868800-5215e92a-86fc-4520-bd70-109e125e3af5.png)
+
+
