--- a/exercise/10_5_24.md
+++ b/exercise/10_5_24.md
@@ -8,3 +8,91 @@ An abstract class has a construtor which prints "This is constructor of abstract
 
 Create an abstract class 'Animals' with two abstract methods 'cats' and 'dogs'. Now create a class 'Cats' with a method 'cats' which prints "Cats meow" and a class 'Dogs' with a method 'dogs' which prints "Dogs bark", both inheriting the class 'Animals'. Now create an object for each of the subclasses and call their respective methods.
 
+
+
+--------------------------------------
+TASKS for abstract class:
+
+Create an abstract class 'Bank' with an abstract method 'getBalance'. $100, $150 and $200 are deposited in banks A, B and C respectively. 'BankA', 'BankB' and 'BankC' are subclasses of class 'Bank', each having a method named 'getBalance'. Call this method by creating an object of each of the three classes.
+
+Create an abstract class 'Animals' with two abstract methods 'cats' and 'dogs'. Now create a class 'Cats' with a method 'cats' which prints "Cats meow" and a class 'Dogs' with a method 'dogs' which prints "Dogs bark", both inheriting the class 'Animals'. Now create an object for each of the subclasses and call their respective methods.
+
+------------------------------------------------
+-----------------------------------------FIND THE ERRORS ------------------------------------------------------------------------------
+
+interface A {
+
+ void m1();
+ 
+}
+
+public class B implements A {
+
+void m1(){
+
+  System.out.println("One"); 	
+  
+ }
+ 
+}
+
+**solution**: Ans: We cannot reduce the visibility of inherited method from interface A.
+
+-----------------------------------------------------------------------------------------------------------------------
+interface A {
+
+ A() { }	
+ 
+ void m1();
+ 
+}
+
+public abstract class B implements A {
+
+public void m1(){
+
+  System.out.println("One"); 	
+  
+ }
+ 
+}
+
+**Ans**: An interface cannot have a constructor.
+
+-----------------------------------------------------------------------------------------------------------------------
+practice problem on abstract class and interface
+
+1.Create an abstract class pen with methods write () and refill () as abstract methods 
+
+2..Use the pen class from Q1 to create a concrete class fountain pen with additional method change Nib ()
+
+3.Create a class monkey with jump ( ) and bite ( ) methods
+Create a class human whichinherits this monkey class and implements basicanimal interface with eat ( ) and sleep methods
+
+4.Create a class telephone with ( ) , lift ( ) and disconnected ( ) methods as abstract methods
+
+create another class smart telephone and demonstrate polymorphism 
+
+5.Demonstrate polymorphism using using monkey  class from Q3 
+
+6.Create an interface TVremote and use it to inherit another interface smart TVremote 
+
+7.Create a class TV which implements TVremote interface from Q6
+
+-----------------------------------------------------------------------------------------------------------------------
+-------------------------------------------
+tasks:
+
+overload
+
+Create a class to print the area of a square and a rectangle. The class has two methods with the same name but different number of parameters. The method for printing area of rectangle has two parameters which are length and breadth respetively while the other method for printing area of square has one parameter which is side of square.
+
+ ![image](https://user-images.githubusercontent.com/90038032/236144329-6fdc499d-51d6-4701-8eec-cb66c9348c82.png)
+
+ tasks: override
+ 
+ ![image](https://user-images.githubusercontent.com/90038032/212380484-3d49fed7-1f67-43ba-b5d9-ca2580a81f1d.png)
+  
+![image](https://user-images.githubusercontent.com/90038032/212380642-032ee95e-9296-4626-bfa5-b5b9376e4de4.png)
+
+------------------------------------------------------
