--- a/materials/java/10_5_24.md
+++ b/materials/java/10_5_24.md
@@ -1,3 +1,68 @@
+**-------------------------------------------------------------------------------------------------------------------------**
+POLYMORPHISM
+
+
+![image](https://user-images.githubusercontent.com/90038032/211873978-c698f564-9a77-485e-98bd-d94a410db2b2.png)
+
+
+![image](https://user-images.githubusercontent.com/90038032/211873855-b039989f-ea76-43b5-b7fe-b29d81d69a07.png)
+
+
+![image](https://user-images.githubusercontent.com/90038032/211873336-fbe375f7-005d-4960-b7d4-b15605f8525c.png)
+
+**-------------------------------------------------------------------------------------------------------------------------**
+
+
+
+
+![image](https://user-images.githubusercontent.com/90038032/212374830-75616a6f-d6e7-4ea9-9f46-8c79d0068f8a.png)
+
+![image](https://user-images.githubusercontent.com/90038032/212374899-4a231964-3497-46f1-b3b6-4c3509bf2599.png)
+
+![image](https://user-images.githubusercontent.com/90038032/212374954-0bfe4204-40c6-4085-b248-e95ea3a91a5c.png)
+
+![image](https://user-images.githubusercontent.com/90038032/212375026-f6de7700-54d1-474a-a108-98ca2e4bb19e.png)
+
+![image](https://user-images.githubusercontent.com/90038032/212375078-3ac9a007-9f9d-4b7d-9d2a-1111c490d04d.png)
+
+![image](https://user-images.githubusercontent.com/90038032/212375141-8ebbedb4-70a1-4325-93bd-0426549b1849.png)
+
+![image](https://user-images.githubusercontent.com/90038032/212375171-ed7b40b8-7dd0-4783-a6e5-50853df88aae.png)
+
+![image](https://user-images.githubusercontent.com/90038032/212375228-4350c67e-485c-499e-95b3-788ac29f4369.png)
+
+![image](https://user-images.githubusercontent.com/90038032/212375317-8307bbc0-d893-42c7-ba45-1c607e5c8504.png)
+
+
+
+
+
+
+REFER:
+https://github.com/ragaPriya224/B1_tyconsult/blob/master/Overloading%207%20different%20case%20study.pdf
+
+https://www.w3schools.com/java/java_polymorphism.asp or https://www.programiz.com/java-programming/polymorphism
+
+https://www.geeksforgeeks.org/output-java-program-set-25-polymorphism/
+
+![image](https://user-images.githubusercontent.com/90038032/213238935-2b4a660c-0660-4b0f-8fbd-a34d9ceda9b0.png)
+
+-------------------------------------------------------------------------------------------------------------
+![image](https://user-images.githubusercontent.com/90038032/213239308-66e5b3e5-f30c-482e-a4b0-1d13e0534ae5.png)
+
+-------------------------------------------------------------------------------------------------------------
+![image](https://user-images.githubusercontent.com/90038032/213239720-90b62cd9-3ffd-4acc-8617-35b492c3e760.png)
+
+-------------------------------------------------------------------------------------------------------------
+![image](https://user-images.githubusercontent.com/90038032/213240198-03c2c9e2-4a92-4239-ab34-08312e9a655a.png)
+
+-------------------------------------------------------------------------------------------------------------
+![image](https://user-images.githubusercontent.com/90038032/213240373-456c195a-e9aa-431e-bb3b-6ca1a68272ad.png)
+
+---------------------------------------------------------------------------------------------------------------
+https://www.w3schools.com/java/ref_keyword_static.asp
+
+---------------------------------------------------------------------------------------------------------------
 
 main  variant: https://www.geeksforgeeks.org/valid-variants-main-java/
 
